name:                hp-site
version:             0.1.0.0
synopsis:            Haskell Platform Web Site
description:         Please see README.md
homepage:            https://github.com/erantapaa/hp-site#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Rantapaa
maintainer:          erantapaa@gmail.com
copyright:           2016 Erik Rantapaa
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, HaskellPlatform, HaskellOrg, ReleaseFiles
                       , Render.Base, Render.Linux, Render.OSX, Render.Windows
                       , TagSoupUtil, HtmlTest
  build-depends:       base >= 4.7 && < 5,
                       bytestring, text, blaze-markup, blaze-builder, blaze-html, tagsoup, pretty-show, pretty, process, temporary
  default-language:    Haskell2010

executable hp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hp-site
  default-language:    Haskell2010

test-suite hp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hp-site
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erantapaa/hp
